# types

./: conanfile.py
src/: CMakeLists.txt  Wyjatek.cpp
src/Types/: TypyProste.h  TypyProsteBO.h  Wyjatek.h
test_package/: conanfile.py  example.cpp
